--- a/gf_timeline/index.html
+++ b/gf_timeline/index.html
@@ -39,7 +39,7 @@
 				<div id="about_kr"></div>
 				<div id="about_en"></div>
 				<div id="about_jp"></div>
-				<div id="about_close" onclick="closeAbout()"></div>
+				<div id="about_close"></div>
 			</div>
 		</div>
 	</div>
@@ -57,7 +57,7 @@
 					<div id="lang_EN" onclick="switchLang('EN')">English</div>
 					<div id="lang_JP" onclick="switchLang('JP')">日本語</div>
 				</div>
-				<div id="enter_about" onclick="clickAbout()"></div>
+				<div id="enter_about"></div>
 				<div id="enter_enter" onclick="enterStory()"></div>
 			</div>
 		</div>
@@ -68,7 +68,7 @@
 			<div id="info_content" ontouchmove="event.stopPropagation()">
 				<div id="info_title"></div>
 				<div id="info_detail"></div>
-				<div id="info_close" onclick="closeInfo()"></div>
+				<div id="info_close"></div>
 			</div>
 		</div>
 	</div>
@@ -78,7 +78,7 @@
 			<div id="catalog_content" ontouchmove="event.stopPropagation()">
 				<div id="catalog_title"></div>
 				<div id="catalog_detail"></div>
-				<div id="catalog_close" onclick="closeCatalog()"></div>
+				<div id="catalog_close"></div>
 			</div>
 		</div>
 	</div>
@@ -91,10 +91,10 @@
 			<div id="detail_btnskip_right" onclick="clickDetailBtn(20)">
 				<img src="image/btn_skip_right.png">
 			</div>
-			<div id="detail_btn_index" onclick="clickCatalogBtn()">
+			<div id="detail_btn_index">
 				<img src="image/btn_index.png">
 			</div>
-			<div id="detail_btn_info" onclick="clickInfoBtn()">
+			<div id="detail_btn_info">
 				<img src="image/btn_info.png">
 			</div>
 			<div id="detail_btnleft" onclick="clickDetailBtn(-1)">
